<resources>
    <string name="app_name">MascoTica</string>
    <string name="title_activity_notifications">notification</string>
    <string name="title_home">Home</string>
    <string name="title_Donate">Donate</string>
    <string name="title_Favorites">Favs</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_Profile">Profile</string>
    <string name="title_activity_home_page">homePage</string>
    <string name="title_activity_donations">donations</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_favorites">Favorites</string>
</resources>