<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_Home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_Favorites"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/title_Favorites" />

    <item
        android:id="@+id/navigation_Notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_Profile"
        android:icon="@drawable/profile"
        android:title="@string/title_Profile" />
    <item
        android:id="@+id/navigation_Donate"
        android:icon="@drawable/donate"
        android:title="@string/title_Donate" />
</menu>
